# mth8408

./: README.md
exercices/: constrained.tex  homework.tex  homework2.tex  modeling.tex  unconstrained.tex  unconstrained_slides.tex  variational.tex
exercices/ampl/: modeling_pb2.mod  modeling_pb3.mod
exercices/fig/model/: problem2.eps
exercices/fig/unconstrained_exercices/: pb3a.jpg~
exercices/matlab/: model_problems.m
exercices/matlab/unconstrained_pb7/: armijo.m  main.m  newton.m  obj1.m  obj2.m  steepest.m
projet/: description.tex
projet/description/: bibliography.bib  description.tex
projet/final_report/: bibliography.bib  final_report.tex  implementation.tex  no_time_scale.fig  opt.tex  rappel.tex
projet/final_report/fig/: arc_mellinger.eps  arc_time_opt.eps  arc_time_opt.fig  cost.eps  figure8.eps  figure8.fig  figure8_derivatives.eps  figure8_derivatives_nonscaled.eps  figure8_derivatives_nonscaled.fig  figure8_derivatives_scaled.eps  figure8_derivatives_scaled.fig  slalom.eps
projet/intermediary_report/: bibliography.bib  changements.tex  implementation.tex  intermediary_report.tex  old.tex  rappel.tex  structure.tex
projet/intermediary_report/fig/: arc_mellinger.fig
projet/math/: equations.tex
projet/matlab/: BuildH.m  BuildH.m~  buildEqualityConstraints.m  buildh.m  discretizeTrajectory2.m  getExponents.m  getexponents.m  linearsystem_test.m  main.m  main.m~  main_optimt.m  qp_system.mat  qp_test.m  setupProblem.m
projet/matlab/individual/: armijo.m  buildConstraints.m  buildSlalomConstraints.m  buildh.m  compare.m  computeTraj.m  discretizeTrajectory.m  main.m  main_optimt.m  objective.m  savetrajfun.m  setupProblem.m
projet/matlab/no_yaw/: buildEqualityConstraints.m  buildh.m  discretizeTrajectory.m  getCoefficientMatrix.m  main.m  tests.m
projet/ros/an_min_snap_traj/: CMakeLists.txt  package.xml
projet/ros/an_min_snap_traj/cmake/: FindqpOASES.cmake
projet/ros/an_min_snap_traj/include/an_min_snap_traj/: GeneralProgramming.h  IpoptAdapter.h  IpoptProblem.h  IpoptSolver.h  OptimizationStats.hpp  QuadraticProgramming.h  SegmentTimeOptimizer.h  TimeAllocationOpt.hpp  Trajectory.h  TrajectoryConstraint.hpp  TrajectoryGenerator.hpp  TrajectoryMath.hpp  TrajectorySegment.hpp
projet/ros/an_min_snap_traj/include/an_min_snap_traj/nlp_solvers/: MyNLP.hpp
projet/ros/an_min_snap_traj/include/an_min_snap_traj/qp_solvers/: IpoptAdapter.hpp
projet/ros/an_min_snap_traj/src/: an_min_snap_traj_node.cpp
projet/ros/an_min_snap_traj/src/an_min_snap_traj/: GeneralProgramming.cpp  IpoptAdapter.cpp  IpoptProblem.cpp  IpoptSolver.cpp  QuadraticProgramming.cpp  SegmentTimeOptimizer.cpp  TimeAllocationOpt.cpp  TrajectoryConstraint.cpp  TrajectoryGenerator.cpp  TrajectoryMath.cpp  TrajectorySegment.cpp
projet/ros/an_min_snap_traj/src/an_min_snap_traj/nlp_solvers/: MyNLP.cpp
projet/ros/an_min_snap_traj/src/an_min_snap_traj/qp_solvers/: IpoptAdapter.cpp
projet/ros/an_min_snap_traj/test/: test_an_min_snap_traj.cpp  test_main.cpp  test_qp.cpp.cpp  test_trajectory_math.cpp
